cmake_minimum_required(VERSION 3.27)
project(Labor4)

set(CMAKE_CXX_STANDARD 17)

add_executable(Labor4
        App.cpp
        ExtendedTest.cpp
        ExtendedTest.h
        Set.cpp
        Set.h
        SetIterator.h
        SetIterator.cpp
        ShortTest.cpp
        ShortTest.h
        ShortTest.h)
