cmake_minimum_required(VERSION 3.27)
project(Labor3)

set(CMAKE_CXX_STANDARD 17)

add_executable(Labor3
        MultiMap.h
        MultiMapIterator.h
        MultiMap.cpp
        App.cpp
        ShortTest.cpp
        ExtendedTest.cpp
        MultiMapIterator.cpp
        MultiMapIterator.cpp
        MultiMap.cpp
        MultiMapIterator.cpp
        MultiMap.cpp
        MultiMapIterator.cpp
        MultiMapIterator.cpp
        MultiMap.cpp
        MultiMap.cpp
        MultiMap.cpp
        MultiMap.cpp
        MultiMap.cpp)
